// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextRob12Font2Xs Component > renders correctly and matches snapshot 1`] = `
.emotion-0 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  font-family: Roboto;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 1%;
}

<p
  class="MuiTypography-root MuiTypography-body1 emotion-0"
>
  Testando componente com snapshot
</p>
`;

exports[`TextRob12Font2Xs Component > renders with custom styles passed via sx prop 1`] = `
.emotion-0 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  color: blue;
  font-family: Roboto;
  font-weight: 400;
  font-size: 24px;
  line-height: 16px;
  letter-spacing: 1%;
}

<p
  class="MuiTypography-root MuiTypography-body1 emotion-0"
>
  Testando componente com sx customizado
</p>
`;
